name: foobar
version: 0.1
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  hs-source-dirs: src/lib
  exposed-modules: Foobar
  build-depends: base

executable foobar
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: main.hs
  build-depends: base, foobar

test-suite test-foobar
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: main.hs
  build-depends: base, foobar
